Ingress/green-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    run: nginx-green
   name: nginx-green-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-green
