Ingress/ingress.-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-3
spec:
  rules:
  - host: store.example.com
    http:
      paths:
      - backend:
          serviceName: store-products
          servicePort: 80
